Tidied up templates and added neutron-plugin support

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -17,3 +17,6 @@ requires:
     interface: rabbitmq
   identity-service:
     interface: keystone
+  neutron-plugin:
+    interface: neutron-plugin
+    scope: container
