--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ options:
       provide a later version of OpenStack will trigger a software
       upgrade.
   rabbit-user:
-    default: nova
+    default: neutron
     type: string
     description: Username used to access rabbitmq queue
   rabbit-vhost:
