Remove neutron- prefix from db info as this is a neutron charm so neutron is implicit

--- a/config.yaml
+++ b/config.yaml
@@ -22,11 +22,11 @@ options:
     default: openstack
     type: string
     description: Rabbitmq vhost
-  neutron-database-user:
+  database-user:
     default: neutron
     type: string
     description: Username for Neutron database access (if enabled)
-  neutron-database:
+  database:
     default: neutron
     type: string
     description: Database name for Neutron (if enabled)
