--- a/metadata.yaml
+++ b/metadata.yaml
@@ -21,3 +21,9 @@ requires:
     interface: rabbitmq
   identity-service:
     interface: keystone
+  ha:
+    interface: hacluster
+    scope: container
+peers:
+  cluster:
+    interface: neutron-api-ha
