Remove debug logging and make neutron-security-groups a boolean

--- a/config.yaml
+++ b/config.yaml
@@ -40,12 +40,10 @@ options:
     type: string
     description: OpenStack Region
   neutron-security-groups:
-    type: string
-    default: "no"
+    type: boolean
+    default: False
     description: |
       Use quantum for security group management.
-      .
-      Only supported for >= grizzly.
   neutron-external-network:
     type: string
     default: ext_net
