--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -3,6 +3,9 @@
 # Configuration file maintained by Juju. Local changes may be overwritten.
 ###############################################################################
 [DEFAULT]
+verbose = {{ verbose }}
+debug = {{ debug }}
+use_syslog = {{ use_syslog }}
 state_path = /var/lib/neutron
 lock_path = $state_path/lock
 bind_host = 0.0.0.0
