--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,7 +15,7 @@ provides:
 requires:
   shared-db:
     interface: mysql-shared
-  pgsql-neutron-db:
+  pgsql-db:
     interface: pgsql
   amqp:
     interface: rabbitmq
