Set l2_population in the local neutron_api ml2 conf

--- a/templates/icehouse/ml2_conf.ini
+++ b/templates/icehouse/ml2_conf.ini
@@ -20,6 +20,7 @@ local_ip = {{ local_ip }}
 
 [agent]
 tunnel_types = gre
+l2_population = {{ l2_population }}
 
 [securitygroup]
 {% if neutron_security_groups -%}
