Add 0mq support

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,9 @@ requires:
   ha:
     interface: hacluster
     scope: container
+  zeromq-configuration:
+    interface: zeromq-configuration
+    scope: container
 peers:
   cluster:
     interface: neutron-api-ha
