--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -32,6 +32,8 @@ neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptable
 
 {% include "parts/rabbitmq" %}
 
+{% include "parts/zeromq" %}
+
 notify_nova_on_port_status_changes = True
 notify_nova_on_port_data_changes = True
 nova_url = {{ nova_url }}
