Add support for notifications with zmq

--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -10,7 +10,10 @@ state_path = /var/lib/neutron
 lock_path = $state_path/lock
 bind_host = 0.0.0.0
 auth_strategy = keystone
+
+{% if notifications == 'True' -%}
 notification_driver = neutron.openstack.common.notifier.rpc_notifier
+{% endif -%}
 
 {% if neutron_bind_port -%}
 bind_port = {{ neutron_bind_port }}
