--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -53,7 +53,7 @@ quota_items = network,subnet,port,security_group,security_group_rule
 root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 
 [keystone_authtoken]
-signing_dir = $state_path/keystone-signing
+signing_dir = /var/lib/neutron/keystone-signing
 {% if service_host -%}
 service_protocol = {{ service_protocol }}
 service_host = {{ service_host }}
