--- a/config.yaml
+++ b/config.yaml
@@ -123,3 +123,9 @@ options:
     description: |
       SSL CA to use with the certificate and key provided - this is only
       required if you are providing a privately signed ssl_cert and ssl_key.
+  # IPv6
+  prefer-ipv6:
+    default: false
+    type: boolean
+    description: "Enable IPv6"
+
