--- a/config.yaml
+++ b/config.yaml
@@ -56,7 +56,11 @@ options:
       .
         ovs - OpenvSwitch Plugin
         nvp - Nicira Network Virtualization Platform
+        vsp - Nuage Networks VSP
       .
+  neutron-plugin-rep
+    type: string
+    description: Optional URL to Neutron Plugin local folder containing Debian packages.
   # HA configuration settings
   vip:
     type: string
@@ -123,3 +127,39 @@ options:
     description: |
       SSL CA to use with the certificate and key provided - this is only
       required if you are providing a privately signed ssl_cert and ssl_key.
+  # Neutron Nuage plugin (VSD) configuration
+  vsd-servers:
+    type: string
+    description: Space delimited addresses of Nuage VSD Server
+  vsd-username:
+    type: string
+    default: csproot
+    description: Username to connect to Nuage VSD Server
+  vsd-password:
+    type: string
+    default: csproot
+    description: Password to connect to Nuage VSD Server
+  vsd-organization:
+    type: string
+    default: csp
+    description: Name of the organization to create in Nuage VSD
+  vsd-auth-ssl:
+    type: bool
+    default: true
+    description: SSL authentication of the Nuage VSD Server
+  vsd-base-uri:
+    type: string
+    default: "/nuage/api/v3_0"
+    description: Name of the organization to create in Nuage VSD
+  vsd-auth-resource:
+    type: string
+    default: csp
+    description: Name of the organization to create in Nuage VSD
+  vsd-netpart-name:
+    type: string
+    default: csp
+    description: Name of the organization to create in Nuage VSD
+  vsd-config-file:
+    type: string
+    description: VSD configuration file name.
+  # end of Nuage VSD configuration
