--- a/templates/icehouse/ml2_conf.ini
+++ b/templates/icehouse/ml2_conf.ini
@@ -4,6 +4,10 @@
 # Configuration file maintained by Juju. Local changes may be overwritten.  
 ###############################################################################
 [ml2]
+{% if neutron_plugin == 'Calico' -%}
+type_drivers = local,flat
+mechanism_drivers = calico
+{% else -%}
 type_drivers = gre,vxlan
 tenant_network_types = gre,vxlan
 mechanism_drivers = openvswitch
@@ -20,11 +24,16 @@ local_ip = {{ local_ip }}
 
 [agent]
 tunnel_types = gre
+{% endif -%}
 
 [securitygroup]
 {% if neutron_security_groups -%}
 enable_security_group = True
+{% if neutron_plugin == 'Calico' -%}
+firewall_driver = neutron.agent.linux.iptables_firewall.IptablesFirewallDriver
+{% else -%}
 firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver
+{% endif -%}
 {% else -%}
 enable_security_group = False
 {% endif -%}
