--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -27,7 +27,15 @@ service_plugins = neutron.services.l3_router.l3_router_plugin.L3RouterPlugin,neu
 
 {% if neutron_security_groups -%}
 allow_overlapping_ips = True
+{% if neutron_plugin == 'Calico' -%}
+neutron_firewall_driver = neutron.agent.linux.iptables_firewall.IptablesFirewallDriver
+{% else -%}
 neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver
+{% endif -%}
+{% endif -%}
+
+{% if neutron_plugin == 'Calico' -%}
+dhcp_agents_per_network = 1000
 {% endif -%}
 
 {% include "parts/rabbitmq" %}
