Run db migrations for neutron

--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -1,6 +1,7 @@
 ###############################################################################
 # [ WARNING ]
 # Configuration file maintained by Juju. Local changes may be overwritten.
+## Restart trigger {{ restart_trigger }}
 ###############################################################################
 [DEFAULT]
 verbose = {{ verbose }}
