--- a/templates/icehouse/ml2_conf.ini
+++ b/templates/icehouse/ml2_conf.ini
@@ -6,7 +6,7 @@
 [ml2]
 type_drivers = gre,vxlan
 tenant_network_types = gre,vxlan
-mechanism_drivers = openvswitch
+mechanism_drivers = openvswitch,l2population
 
 [ml2_type_gre]
 tunnel_id_ranges = 1:1000
@@ -20,7 +20,6 @@ local_ip = {{ local_ip }}
 
 [agent]
 tunnel_types = gre
-l2_population = {{ l2_population }}
 
 [securitygroup]
 {% if neutron_security_groups -%}
