--- a/templates/icehouse/ml2_conf.ini
+++ b/templates/icehouse/ml2_conf.ini
@@ -19,7 +19,7 @@ enable_tunneling = True
 local_ip = {{ local_ip }}
 
 [agent]
-tunnel_types = gre
+tunnel_types = {{ ml2_typedriver }}
 
 [securitygroup]
 {% if neutron_security_groups -%}
