Add support for worker process configuration

--- a/config.yaml
+++ b/config.yaml
@@ -158,4 +158,11 @@ options:
       order for this charm to function correctly, the privacy extension must be
       disabled and a non-temporary address must be configured/available on
       your network interface.
+  worker-multiplier:
+    type: int
+    default: 2
+    description: |
+      The CPU core multiplier to use when configuring worker processes for
+      Neutron.  By default, the number of workers for each daemon is set to
+      twice the number of CPU cores a service unit has.
 
