--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -13,6 +13,7 @@ bind_host = {{ bind_host }}
 auth_strategy = keystone
 notification_driver = neutron.openstack.common.notifier.rpc_notifier
 api_workers = {{ workers }}
+rpc_workers = {{ workers }}
 
 {% if neutron_bind_port -%}
 bind_port = {{ neutron_bind_port }}
