Horizon falls over if the L3 extensions aren't present.

--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -20,7 +20,7 @@ bind_port = 9696
 
 {% if core_plugin -%}
 core_plugin = {{ core_plugin }}
-{% if neutron_plugin in ['ovs', 'ml2'] -%}
+{% if neutron_plugin in ['ovs', 'ml2', 'Calico'] -%}
 service_plugins = neutron.services.l3_router.l3_router_plugin.L3RouterPlugin,neutron.services.firewall.fwaas_plugin.FirewallPlugin,neutron.services.loadbalancer.plugin.LoadBalancerPlugin,neutron.services.vpn.plugin.VPNDriverPlugin,neutron.services.metering.metering_plugin.MeteringPlugin
 {% endif -%}
 {% endif -%}
