nuage_plugin.ini fixes

--- a/config.yaml
+++ b/config.yaml
@@ -150,15 +150,15 @@ options:
     description: List of packages to install for neutron-plugin-nuage VSP.
   vsd-auth:
     type: string
-    default: csproot
+    default: "csproot:csproot"
     description: Username Password to connect to Nuage VSD Server
   vsd-organization:
     type: string
     default: csp
     description: Name of the organization to create in Nuage VSD
   vsd-auth-ssl:
-    type: boolean
-    default: true
+    type: string
+    default: True
     description: SSL authentication of the Nuage VSD Server
   vsd-base-uri:
     type: string
@@ -166,7 +166,7 @@ options:
     description: Name of the organization to create in Nuage VSD
   vsd-auth-resource:
     type: string
-    default: csp
+    default: "/me"
     description: Name of the organization to create in Nuage VSD
   vsd-netpart-name:
     type: string
