--- a/templates/icehouse/nuage_plugin.ini
+++ b/templates/icehouse/nuage_plugin.ini
@@ -4,7 +4,7 @@
 # Configuration file maintained by Juju. Local changes may be overwritten.
 ###############################################################################
 [DEFAULT]
-server        = {{ vsd_ip_address }}
+server        = {{ vsd_server }}
 serverauth    = {{ vsd_auth }}
 auth_resource = {{ vsd_auth_resource }}
 organization  = {{ vsd_organization }}
