--- a/templates/icehouse/nuage_plugin.ini
+++ b/templates/icehouse/nuage_plugin.ini
@@ -3,7 +3,7 @@
 # [ WARNING ]
 # Configuration file maintained by Juju. Local changes may be overwritten.
 ###############################################################################
-[DEFAULT]
+[restproxy]
 server        = {{ vsd_server }}
 serverauth    = {{ vsd_auth }}
 auth_resource = {{ vsd_auth_resource }}
