Use centralized zeromq template

--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -38,8 +38,6 @@ neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptable
 
 {% include "parts/rabbitmq" %}
 
-{% include "parts/zeromq" %}
-
 notify_nova_on_port_status_changes = True
 notify_nova_on_port_data_changes = True
 nova_url = {{ nova_url }}
@@ -80,3 +78,5 @@ admin_password = {{ admin_password }}
 service_provider=LOADBALANCER:Haproxy:neutron.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
 service_provider=VPN:openswan:neutron.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
 service_provider=FIREWALL:Iptables:neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver:default
+
+{% include "zeromq" %}
