--- a/charm-helpers-sync.yaml
+++ b/charm-helpers-sync.yaml
@@ -1,4 +1,4 @@
-branch: lp:charm-helpers
+branch: lp:~cts-engineering/charm-helpers/neutron-mtu
 destination: hooks/charmhelpers
 include:
     - core
