--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -52,7 +52,7 @@ quota_driver = neutron.db.quota_db.DbQuotaDriver
 quota_items = network,subnet,port,security_group,security_group_rule
 quota_security_group = {{ quota_security_group }}
 quota_security_group_rule = {{ quota_security_group_rule }}
-{% else %}
+{% else -%}
 quota_items = network,subnet,port
 {% endif -%}
 quota_network = {{ quota_network }}
