--- a/config.yaml
+++ b/config.yaml
@@ -67,44 +67,44 @@ options:
         vxlan 
       .
   # Quota configuration settings
-  quota_security_group:
+  quota-security-group:
     default: 10
     type: int
     description: |
       Number of security groups allowed per tenant. A negative value means
       unlimited.
-  quota_security_group_rule:
+  quota-security-group-rule:
     default: 100
     type: int
     description: |
       Number of security group rules allowed per tenant. A negative value means
       unlimited
-  quota_network:
+  quota-network:
     default: 10
     type: int
     description: |
       Number of networks allowed per tenant. A negative value means unlimited.
-  quota_subnet:
+  quota-subnet:
     default: 10
     type: int
     description: |
       Number of subnets allowed per tenant. A negative value means unlimited.
-  quota_port:
+  quota-port:
     default: 50
     type: int
     description: |
       Number of ports allowed per tenant. A negative value means unlimited.
-  quota_vip:
+  quota-vip:
     default: 10
     type: int
     description: |
       Number of vips allowed per tenant. A negative value means unlimited.
-  quota_pool:
+  quota-pool:
     default: 10
     type: int
     description: |
       Number of pools allowed per tenant. A negative value means unlimited.
-  quota_member:
+  quota-member:
     default: -1
     type: int
     description: |
@@ -112,7 +112,7 @@ options:
       The default is unlimited because a member is not a real resource consumer
       on Openstack. However, on back-end, a member is a resource consumer
       and that is the reason why quota is possible.
-  quota_health_monitors:
+  quota-health-monitors:
     default: -1
     type: int
     description: |
@@ -121,12 +121,12 @@ options:
       The default is unlimited because a health monitor is not a real resource
       consumer on Openstack. However, on back-end, a member is a resource consumer
       and that is the reason why quota is possible.
-  quota_router:
+  quota-router:
     default: 10
     type: int
     description: |
       Number of routers allowed per tenant. A negative value means unlimited.
-  quota_floatingip: 
+  quota-floatingip: 
     default: 50
     type: int
     description: |
