Attempt to work around Bug 1364215

--- a/templates/juno/neutron.conf
+++ b/templates/juno/neutron.conf
@@ -15,6 +15,11 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 api_workers = {{ workers }}
 rpc_workers = {{ workers }}
 
+{% if enable_dvr == 'True' -%}
+# Bug 1364215
+dvr_base_mac = fa:16:3f:00:00:00
+{% endif -%}
+
 router_distributed = {{ enable_dvr }}
 
 {% if neutron_bind_port -%}
