--- a/templates/juno/neutron.conf
+++ b/templates/juno/neutron.conf
@@ -17,6 +17,12 @@ rpc_workers = {{ workers }}
 
 router_distributed = {{ enable_dvr }}
 
+l3_ha = {{ l3_ha }}
+{% if l3_ha -%}
+max_l3_agents_per_router = {{ max_l3_agents_per_router }}
+min_l3_agents_per_router = {{ min_l3_agents_per_router }}
+{% endif -%}
+
 {% if neutron_bind_port -%}
 bind_port = {{ neutron_bind_port }}
 {% else -%}
