Add juno specific config files, drop icehouse zeromq support, add to kilo

--- a/templates/juno/neutron.conf
+++ b/templates/juno/neutron.conf
@@ -11,7 +11,10 @@ state_path = /var/lib/neutron
 lock_path = $state_path/lock
 bind_host = {{ bind_host }}
 auth_strategy = keystone
+
+{% if notifications == 'True' -%}
 notification_driver = neutron.openstack.common.notifier.rpc_notifier
+{% endif -%}
 api_workers = {{ workers }}
 rpc_workers = {{ workers }}
 
@@ -24,7 +27,7 @@ bind_port = 9696
 {% if core_plugin -%}
 core_plugin = {{ core_plugin }}
 {% if neutron_plugin in ['ovs', 'ml2'] -%}
-service_plugins = router,firewall,lbaas,vpnaas,metering
+service_plugins = neutron.services.l3_router.l3_router_plugin.L3RouterPlugin,neutron.services.firewall.fwaas_plugin.FirewallPlugin,neutron.services.loadbalancer.plugin.LoadBalancerPlugin,neutron.services.vpn.plugin.VPNDriverPlugin,neutron.services.metering.metering_plugin.MeteringPlugin
 {% endif -%}
 {% endif -%}
 
@@ -74,6 +77,6 @@ admin_password = {{ admin_password }}
 {% include "parts/section-database" %}
 
 [service_providers]
-service_provider=LOADBALANCER:Haproxy:neutron_lbaas.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
-service_provider=VPN:openswan:neutron_vpnaas.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
-service_provider=FIREWALL:Iptables:neutron_fwaas.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver:default
+service_provider=LOADBALANCER:Haproxy:neutron.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
+service_provider=VPN:openswan:neutron.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
+service_provider=FIREWALL:Iptables:neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver:default
