Update headers for templates

--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -1,3 +1,4 @@
+# icehouse
 ###############################################################################
 # [ WARNING ]
 # Configuration file maintained by Juju. Local changes may be overwritten.
