--- a/templates/kilo/neutron.conf
+++ b/templates/kilo/neutron.conf
@@ -8,7 +8,6 @@ verbose = {{ verbose }}
 debug = {{ debug }}
 use_syslog = {{ use_syslog }}
 state_path = /var/lib/neutron
-lock_path = $state_path/lock
 bind_host = {{ bind_host }}
 auth_strategy = keystone
 notification_driver = neutron.openstack.common.notifier.rpc_notifier
@@ -33,8 +32,6 @@ allow_overlapping_ips = True
 neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver
 {% endif -%}
 
-{% include "parts/rabbitmq" %}
-
 notify_nova_on_port_status_changes = True
 notify_nova_on_port_data_changes = True
 nova_url = {{ nova_url }}
@@ -56,7 +53,7 @@ quota_security_group_rule = {{ quota_security_group_rule }}
 quota_items = network,subnet,port
 {% endif -%}
 quota_network = {{ quota_network }}
-quota_subnet = {{ quota_subnet }} 
+quota_subnet = {{ quota_subnet }}
 quota_port = {{ quota_port }}
 quota_vip = {{ quota_vip }}
 quota_pool = {{ quota_pool }}
@@ -68,23 +65,24 @@ quota_floatingip = {{ quota_floatingip }}
 [agent]
 root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 
+{% if auth_host -%}
 [keystone_authtoken]
-signing_dir = {{ signing_dir }}
-{% if service_host -%}
-service_protocol = {{ service_protocol }}
-service_host = {{ service_host }}
-service_port = {{ service_port }}
-auth_host = {{ auth_host }}
-auth_port = {{ auth_port }}
-auth_protocol =  {{ auth_protocol }}
+identity_uri = {{ auth_protocol }}://{{ auth_host }}:{{ auth_port }}/{{ auth_admin_prefix }}
+auth_uri = {{ service_protocol }}://{{ service_host }}:{{ service_port }}/{{ service_admin_prefix }}
 admin_tenant_name = {{ admin_tenant_name }}
 admin_user = {{ admin_user }}
 admin_password = {{ admin_password }}
+signing_dir = {{ signing_dir }}
 {% endif -%}
 
 {% include "parts/section-database" %}
+
+{% include "parts/section-rabbitmq" %}
 
 [service_providers]
 service_provider=LOADBALANCER:Haproxy:neutron_lbaas.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
 service_provider=VPN:openswan:neutron_vpnaas.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
 service_provider=FIREWALL:Iptables:neutron_fwaas.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver:default
+
+[oslo_concurrency]
+lock_path = $state_path/lock
