More sectional config

--- a/templates/kilo/neutron.conf
+++ b/templates/kilo/neutron.conf
@@ -35,13 +35,15 @@ neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptable
 notify_nova_on_port_status_changes = True
 notify_nova_on_port_data_changes = True
 nova_url = {{ nova_url }}
-nova_region_name = {{ region }}
 {% if auth_host -%}
 nova_admin_username = {{ admin_user }}
 nova_admin_tenant_id = {{ admin_tenant_id }}
 nova_admin_password = {{ admin_password }}
 nova_admin_auth_url = {{ auth_protocol }}://{{ auth_host }}:{{ auth_port }}/v2.0
 {% endif -%}
+
+[nova]
+nova_region_name = {{ region }}
 
 [quotas]
 quota_driver = neutron.db.quota_db.DbQuotaDriver
