Switch to using charm-helper templates for rabbitmq

--- a/templates/kilo/neutron.conf
+++ b/templates/kilo/neutron.conf
@@ -77,7 +77,7 @@ signing_dir = {{ signing_dir }}
 
 {% include "parts/section-database" %}
 
-{% include "parts/section-rabbitmq" %}
+{% include "section-rabbitmq-oslo" %}
 
 [service_providers]
 service_provider=LOADBALANCER:Haproxy:neutron_lbaas.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
