--- a/config.yaml
+++ b/config.yaml
@@ -83,7 +83,7 @@ options:
     default: "physnet1:1000:2000"
     description: |
       Space-delimited list of Neutron network-provider & vlan-id-ranges using
-      the following format (<provider>:<start>:<end>).
+      the following format "<provider>:<start>:<end> ...".
   # Quota configuration settings
   quota-security-group:
     default: 10
