--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,8 +22,6 @@ provides:
     interface: neutron-api
   neutron-plugin-api:
     interface: neutron-plugin-api
-  calico-network-api:
-    interface: calico-network-api
 requires:
   shared-db:
     interface: mysql-shared
@@ -36,6 +34,8 @@ requires:
   ha:
     interface: hacluster
     scope: container
+  etcd-peer:
+    interface: http
 peers:
   cluster:
     interface: neutron-api-ha
